--- a/estilo.css
+++ b/estilo.css
@@ -1,8 +1,32 @@
 body {
-    background-color: bisque;
+    background-color: antiquewhite;
     font-family: calibry;
     font-size: 18px;
-    color:darkblue ;
+    color:black ;
+}
+
+header {
+    background-color: white;
+}
+
+a {
+    color: darkblue;
+}
+
+header a {
+    background-color: transparent;
+    text-decoration: none;
+}
+
+article a {
+    background-color: white;
+    color: black;
+    text-decoration: none;
+}
+
+footer {
+    background-color: white;
+    color: firebrick ;
 }
 
 
