--- a/estilo.css
+++ b/estilo.css
@@ -1,3 +1,7 @@
+* {
+    margin: 0;
+}
+
 body {
     background-color: antiquewhite;
     font-family: calibry;
@@ -7,6 +11,7 @@ body {
 
 header {
     background-color: white;
+    padding: 30px;
 }
 
 a {
@@ -19,14 +24,31 @@ header a {
 }
 
 article a {
-    background-color: white;
+    background-color:white;
+    color: black;
+    text-decoration: none;
+    padding: 10px;
+}
+ 
+article {
+    background-color: burlywood;
+    padding: 30px;
+    margin-bottom: 10px;
+}
+
+.topo a {
     color: black;
     text-decoration: none;
 }
 
 footer {
     background-color: white;
-    color: firebrick ;
+    color: black ;
+    padding: 20px;
+}
+
+main{
+    padding: 30px;
 }
 
 
