--- a/estilo.css
+++ b/estilo.css
@@ -3,52 +3,63 @@
 }
 
 body {
-    background-color: antiquewhite;
+    background-color: burlywood;
     font-family: calibry;
     font-size: 18px;
     color:black ;
 }
 
-header {
-    background-color: white;
+.topo {
+    background-color:bisque;
     padding: 30px;
 }
 
-a {
-    color: darkblue;
-}
-
-header a {
-    background-color: transparent;
-    text-decoration: none;
-}
-
-article a {
+.botao {
     background-color:white;
     color: black;
     text-decoration: none;
     padding: 10px;
 }
  
-article {
-    background-color: burlywood;
+.materia{
+    background-color:bisque;
     padding: 30px;
     margin-bottom: 10px;
 }
 
-.topo a {
+.topo a{
     color: black;
     text-decoration: none;
 }
 
-footer {
-    background-color: white;
-    color: black ;
+footer{
+    background-color: bisque;
+    color: black;
     padding: 20px;
 }
 
+
 main{
     padding: 30px;
+}
+
+.menu{
+    display: flex;
+    list-style:none;
+    margin-left: 800px;
+}
+
+.menu li{
+    margin-left: 20px;
+    
+}
+
+.menu a:hover{
+    color: brown;
+}
+
+.navegacao {
+    display: flex;
 }
 
 
