--- a/estilo.css
+++ b/estilo.css
@@ -19,12 +19,28 @@ body {
     color: black;
     text-decoration: none;
     padding: 10px;
+    display: inline-block;
 }
  
 .materia{
     background-color:bisque;
     padding: 30px;
     margin-bottom: 10px;
+    width: 800px;
+    text-align: center;
+    margin-left: automatico;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.materia img{
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.materia h1{
+    margin-bottom: 10px;
+    font-size: 30px;
 }
 
 .topo a{
@@ -32,10 +48,11 @@ body {
     text-decoration: none;
 }
 
-footer{
+.rodape{
     background-color: bisque;
     color: black;
     padding: 20px;
+    text-align: center;
 }
 
 
@@ -46,7 +63,7 @@ main{
 .menu{
     display: flex;
     list-style:none;
-    margin-left: 800px;
+    margin-left: 1200px;
 }
 
 .menu li{
@@ -55,11 +72,24 @@ main{
 }
 
 .menu a:hover{
-    color: brown;
+    color: bisque;
 }
 
 .navegacao {
     display: flex;
+}
+
+.titulo{
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 40px;
+}
+
+.texto{
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 25px;
+    color: black;
 }
 
 
