--- a/estilo.css
+++ b/estilo.css
@@ -1,9 +1,10 @@
 * {
     margin: 0;
+    box-sizing: border-box;
 }
 
 body {
-    background-color:pink;
+    background-color:lightpink;
     font-family: calibry;
     font-size: 18px;
     color:black ;
@@ -21,6 +22,8 @@ body {
     padding: 10px;
     display: inline-block;
     border-radius: 10px;
+    font-size: 18px;
+    border: 0;
 }
 
 .botao:hover{
@@ -105,6 +108,41 @@ main{
     grid-template-columns: repeat(auto-fill,minmax(700px,1fr));
     gap: 5px;
 }
+
+.rotulo{
+    display: block;
+    margin-bottom: 20px;
+}
+
+.campo{
+    display: block;
+    width: 100%;
+    height: 30PX;
+    font-size: 16px;
+    padding-left: 10px;
+    font-family: calibri;
+    border: 1px red solid;
+    background-color: pink;
+}
+
+.campo:focus{
+    background-color:white;
+    outline: none;
+}
+
+.contato{
+    background-color:white ;
+    padding: 30px;
+    width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+}
+textarea.campo{
+    height: 150px;
+    padding: 10px;
+    font-family:calibri;
+}
+
 
 
     
