--- a/estilo.css
+++ b/estilo.css
@@ -37,7 +37,7 @@ body {
     background-color:whitesmoke;
     padding:30px;
     margin-bottom:10px;
-    width:320px;
+    width:620px;
     text-align:center;
     margin-left:auto;
     margin-right:auto;
@@ -87,24 +87,25 @@ main{
 
 .navegacao {
     display: flex;
+    align-items: center;
 }
 
 .titulo{
     text-align: center;
     margin-bottom: 20px;
-    font-size: 34px;
+    font-size: 30px;
 }
 
 .texto{
     text-align: center;
     margin-bottom: 30px;
-    font-size: 20px;
+    font-size: 23px;
     color: black;
 }
 
 .grade{
     display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(320px,1fr));
+    grid-template-columns: repeat(auto-fill,minmax(620px,1fr));
     gap: 5px;
 }
 
@@ -154,8 +155,10 @@ textarea.campo{
 
     .materia h1 {
         font-size: 30px;
+        width: 320px;
     }
 }
+
 
 
 
